# fastcsum

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  addc.hpp  checksum-adx-align.s  checksum-adx-align2.s  checksum-adx-v2.s  checksum-adx.s  checksum-avx2-v3.s  checksum-avx2-v5.s  checksum-avx2-v7.s  checksum-avx2-v8.s  checksum-avx2.cpp  checksum-generic.cpp  checksum-generic64.cpp  checksum-simple-opt.cpp  checksum-simple.cpp  checksum-test.cpp  checksum-vec128.cpp  checksum-vec256.cpp  checksum-x64-128b.s  checksum-x64-64b.s  checksum-x64.s  checksum.cpp  checksum.hpp  cpuid.cpp  cpuid.hpp  fastcsum-version.cpp  test-fastcsum.cpp  vcpkg-configuration.json  vcpkg.json  vectorized.hpp
include/: fastcsum.h  fastcsum.hpp
x86/: checksum-avx2.cpp
x86/asm/: checksum-adx-align.s  checksum-adx-align2.s  checksum-adx-v2.s  checksum-avx2-negc.s  checksum-avx2-v6.s  checksum-avx2-v7.s  checksum-x64-128b.s  checksum-x64-64b.s
